[build-system]
requires = ["setuptools>=61.0.0", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "grasp-n-see"
version = "0.0.1"
description = "...s"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Denis Shcherba", email = "d.e.shcherba@gmail.com" },
]
keywords = ["grasp learning", "object reconstruction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "robotic", 
]

[project.urls]
Homepage = "https://github.com/denis-shcherba/GRASP-N-SEE"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"] 